<resources>
    <string name="app_name">ExamenIB</string>
    <string name="nombre">Nombre</string>
    <string name="enter">Entrar</string>
    <string name="manageTend">Gestionar Tiendas</string>
    <string name="createTend">Crear Tienda</string>
    <string name="nombres">Nombres</string>
    <string name="address">Dirección</string>
    <string name="openningDay">Fecha de Apertura</string>
    <string name="ruc">RUC</string>
    <string name="matriz">Matriz</string>
    <string name="save">GUARDAR</string>
    <string name="tends">Tiendas</string>
    <string name="productNumber">Numero de Producto</string>
    <string name="description">Descripción</string>
    <string name="price">Precio</string>
    <string name="launchDate">Fecha de lanzamiento</string>
    <string name="guarantyYears">Años de Garantía</string>
    <string name="delete">Eliminar</string>
    <string name="update">Actualizar</string>
    <string name="manageProducts">Gestionar Productos</string>
    <string name="createProduct">Crear producto</string>
    <string name="products">Productos</string>
</resources>
