<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ManageProduct">

    <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn-delete" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.955"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/btn-update"/>
    <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn-update"
            app:layout_constraintTop_toTopOf="@+id/btn-delete"
            app:layout_constraintBottom_toBottomOf="@+id/btn-delete" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.781"
            app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt-product-number"
            app:layout_constraintStart_toStartOf="@+id/editText2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/editText2" android:layout_marginTop="140dp"
            app:layout_constraintTop_toTopOf="parent" android:hint="@string/nombre"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt-description" app:layout_constraintVertical_bias="0.372"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt-product-number" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/productNumber"
            app:layout_constraintVertical_bias="0.652"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt-description"
            app:layout_constraintStart_toStartOf="@+id/txt-product-number"
            app:layout_constraintEnd_toEndOf="@+id/txt-product-number" android:layout_marginTop="228dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/description" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt-price" app:layout_constraintVertical_bias="0.191"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txt-price"
            app:layout_constraintStart_toStartOf="@+id/txt-description" app:layout_constraintEnd_toEndOf="@+id/txt-description"
            android:hint="@string/price" android:layout_marginTop="328dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt-launch-date" app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt-launch-date"
            android:hint="@string/launchDate"
            app:layout_constraintStart_toStartOf="@+id/txt-price" app:layout_constraintEnd_toEndOf="@+id/txt-price"
            android:layout_marginTop="416dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt-guaranty-years" app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt-guaranty-years"
            android:hint="@string/guarantyYears"
            app:layout_constraintStart_toStartOf="@+id/txt-launch-date" app:layout_constraintEnd_toEndOf="@+id/txt-launch-date"
            android:layout_marginTop="492dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>
</android.support.constraint.ConstraintLayout>