<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateProduct">

    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn-save-product" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.871"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt-product-number"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:hint="@string/productNumber"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txt-nombre"
            app:layout_constraintVertical_bias="0.48"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt-nombre"
            app:layout_constraintStart_toStartOf="@+id/txt-product-number" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/txt-product-number" android:layout_marginTop="108dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/nombre" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt-description" app:layout_constraintVertical_bias="0.21"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt-description"
            app:layout_constraintStart_toStartOf="@+id/txt-nombre" app:layout_constraintEnd_toEndOf="@+id/txt-nombre"
            android:layout_marginTop="196dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/description"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txt-price"
            app:layout_constraintVertical_bias="0.387"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txt-price"
            android:hint="@string/price" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/txt-launch-date" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.958"
            app:layout_constraintStart_toStartOf="@+id/txt-description"
            app:layout_constraintEnd_toEndOf="@+id/txt-description" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt-launch-date"
            app:layout_constraintStart_toStartOf="@+id/txt-price" app:layout_constraintEnd_toEndOf="@+id/txt-price"
            android:layout_marginTop="392dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/launchDate"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txt-guaranty-years"
            app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt-guaranty-years"
            app:layout_constraintStart_toStartOf="@+id/txt-launch-date"
            app:layout_constraintEnd_toEndOf="@+id/txt-launch-date" android:hint="@string/guarantyYears"
            android:layout_marginBottom="44dp" app:layout_constraintBottom_toTopOf="@+id/btn-save-product"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.983"/>
</android.support.constraint.ConstraintLayout>